# EVA

./: .clang-format  .gitignore  .ignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  autoexec.cfg  tmp.spv
Assets/: Main.shader  character.blend  character.blend1  character.glb  cone.glb  cone.mdl  cube.mdl  map_prime.blend  map_prime.glb  mdl_female_base.glb  monke.glb  proto.png~  shd_brush.cshader  shd_brush.shader  shd_lines.cshader  shd_lines.shader  shd_main.cshader  shd_main.shader  shd_quad.cshader  shd_quad.shader  simple.mpe  test.map  test.mapc  test.mpe  test2.map  test2.mpe  test3.map  test3.mpe  ui_assets.psd
Assets/Maps/: simple.map  test.map  test.mpe
Assets/Models/: cone.mdl  mdl_female_base.mdl
Assets/Sera/sera/: sera2.blend  sera2.blend1  sera3.blend  sera3.blend1
Assets/ShaderFiles/: DrawBox.fs.glsl  DrawBox.vs.glsl  Lines.vs.glsl  Main.fs.glsl  Main.vs.glsl
Assets/Shaders/: shd_brush.shader  shd_lines.shader  shd_main.shader  shd_quad.shader
Assets/Textures/: ui_assets.psd
EVA/: App.cpp  App.hpp  Arena.cpp  Arena.hpp  Asset.cpp  Asset.hpp  Assets.cpp  Assets.hpp  BasePlayableGameMode.cpp  BasePlayableGameMode.hpp  Binary.hpp  CSG.cpp  CSG.hpp  Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  ClientGame.cpp  ClientGame.hpp  Collision.cpp  Collision.hpp  Common.hpp  Console.cpp  Console.hpp  Draw.cpp  Draw.hpp  ECharacter.cpp  EVA.gen.cpp  EVA.natvis  Editor.cpp  Editor.hpp  Entities.cpp  Entities.hpp  FS.cpp  FS.hpp  Font.cpp  Font.hpp  GL.cpp  GL.hpp  GLTF.cpp  (+46 more)
EVA/Assets/: Asset.cpp  Asset.hpp  EditorMap.hpp  Font.hpp  GLTF.cpp  GLTF.hpp  Map.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshAsset.cpp  MeshAsset.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  ShaderSource.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
EVA/Async/: JobSystem.cpp  JobSystem.hpp
EVA/Core/: Allocator.cpp  Allocator.hpp  Arena.cpp  Arena.hpp  Base64.cpp  Base64.hpp  Basic.hpp  Binary.hpp  Common.hpp  CommonIncludes.hpp  FS.cpp  FS.hpp  Hashing.cpp  Hashing.hpp  OS.hpp  Object.hpp  Result.cpp  Result.hpp  Serialization.cpp  Serialization.hpp  String.cpp  String.hpp  Utils.cpp  Vector.hpp  Win32.cpp
EVA/Editor/: BrushTool.cpp  BrushTool.hpp  Editor.cpp  Editor.hpp  EntityTool.cpp  EntityTool.hpp  SelectTool.cpp  SelectTool.hpp  Tool.hpp
EVA/Entities/: ECamera.cpp  ECamera.hpp  ECharacter.cpp  ECharacter.hpp  EMarker.hpp  Entities.cpp  Entity.hpp  EntityManager.hpp
EVA/GFX/: GPUDevice.cpp  GPUDevice.hpp  GPUDevice_Vulkan.cpp  GPUDevice_Vulkan.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsDevice_Vulkan.cpp  GraphicsDevice_Vulkan.hpp  Material.cpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp
EVA/GameModes/: BasePlayableGameMode.cpp  BasePlayableGameMode.hpp  EditorGameMode.cpp  EditorGameMode.hpp  GameMode.cpp  GameMode.hpp
EVA/Renderer/: GL.cpp  GL.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsDevice_Vulkan.cpp  GraphicsDevice_Vulkan.hpp  Material.cpp  Renderer.cpp  Renderer.hpp
EVA/Shaders/: Common.h  DrawBox.fs.glsl  DrawBox.vs.glsl  Lines.fs.glsl  Lines.vs.glsl  Main.fs.glsl  Main.vs.glsl  Triangle.fs.glsl  Triangle.vs.glsl  UIBox.vs.glsl
EVAGEN/: build.ps1  evagen.cpp
etc/: franchise.js  names.txt
etc/Sera/: monkey.glb
etc/Sera/sera/: sera3.blend  sera3.blend1
